--- a/src/main/resources/eus/ehu/presentation/FlightBooking.fxml
+++ b/src/main/resources/eus/ehu/presentation/FlightBooking.fxml
@@ -3,14 +3,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="507.0" prefWidth="638.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eus.ehu.presentation.FlightBookingController">
-   <children>
       <Label layoutX="50.0" layoutY="57.0" text="Departure city:" />
       <Label layoutX="50.0" layoutY="91.0" text="Arrival city:" />
       <TextField fx:id="departureInput" layoutX="160.0" layoutY="53.0" prefHeight="26.0" prefWidth="401.0" text="Donostia" />
@@ -21,16 +21,18 @@
       <Label layoutX="426.0" layoutY="133.0" text="Day:" />
       <ComboBox fx:id="monthCombo" layoutX="245.0" layoutY="128.0" prefWidth="150.0" />
       <TextField fx:id="dayInput" layoutX="467.0" layoutY="128.0" prefHeight="26.0" prefWidth="93.0" text="7" />
-      <Label layoutX="49.0" layoutY="183.0" text="Fare:" />
-      <RadioButton fx:id="firstRB" layoutX="100.0" layoutY="183.0" mnemonicParsing="false" selected="true" text="First class">
+      <Label layoutX="51.0" layoutY="163.0" text="Fare:" />
+      <RadioButton fx:id="firstRB" layoutX="139.0" layoutY="163.0" mnemonicParsing="false" selected="true" text="First class">
          <toggleGroup>
             <ToggleGroup fx:id="fareRB" />
          </toggleGroup></RadioButton>
-      <RadioButton fx:id="businessRB" layoutX="231.0" layoutY="183.0" mnemonicParsing="false" text="Business class" toggleGroup="$fareRB" />
-      <RadioButton fx:id="economyRB" layoutX="349.0" layoutY="183.0" mnemonicParsing="false" text="Economy class" toggleGroup="$fareRB" />
-      <Button layoutX="203.0" layoutY="225.0" mnemonicParsing="false" onAction="#searchConFlightsButton" text="Search matching flights" />
-      <Label fx:id="searchResultAnswer" layoutX="112.0" layoutY="261.0" prefHeight="17.0" prefWidth="344.0" text="  " />
-      <ListView fx:id="conFlightList" layoutX="110.0" layoutY="289.0" prefHeight="168.0" prefWidth="365.0" />
-      <Button fx:id="bookSelectedConFlightButton" layoutX="110.0" layoutY="467.0" mnemonicParsing="false" onAction="#selectConFlight" prefHeight="26.0" prefWidth="365.0" text=" " />
-   </children>
+      <RadioButton fx:id="businessRB" layoutX="272.0" layoutY="163.0" mnemonicParsing="false" text="Business class" toggleGroup="$fareRB" />
+      <RadioButton fx:id="economyRB" layoutX="418.0" layoutY="163.0" mnemonicParsing="false" text="Economy class" toggleGroup="$fareRB" />
+      <Button layoutX="132.0" layoutY="190.0" mnemonicParsing="false" onAction="#searchConFlightsButton" prefHeight="26.0" prefWidth="373.0" text="Search matching flights" />
+      <Label fx:id="searchResultAnswer" alignment="CENTER" layoutX="148.0" layoutY="403.0" prefHeight="17.0" prefWidth="344.0" text="  " />
+      <Button fx:id="bookSelectedConFlightButton" layoutX="136.0" layoutY="466.0" mnemonicParsing="false" onAction="#selectConFlight" prefHeight="26.0" prefWidth="365.0" text=" " />
+      <ComboBox fx:id="conFlightList" layoutX="76.0" layoutY="428.0" prefHeight="26.0" prefWidth="485.0" />
+      <ImageView fitHeight="207.0" fitWidth="170.0" layoutX="234.0" layoutY="230.0" pickOnBounds="true" preserveRatio="true">
+            <Image url="@plane-fire.png" />
+      </ImageView>
 </AnchorPane>
